# TauIR

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TauIR.sln  conanfile.txt  init.bat  premake5.lua
TauIRDebug/: CMakeLists.txt  TauIRDebug.vcxproj
TauIRDebug/include/TauIR/: ByteCodeDumper.hpp
TauIRDebug/src/: ByteCodeDumper.cpp
TauIRLib/: CMakeLists.txt  TauIRLib.vcxproj  TauIRLib.vcxproj.filters
TauIRLib/include/TauIR/: Common.hpp  CompileControls.hpp  Emulator.hpp  Function.hpp  FunctionNameMangler.hpp  IrToSsa.hpp  IrVisitor.hpp  IrVisitor.inl  IrWriter.hpp  Module.hpp  Opcodes.hpp  SafetyControls.hpp  SsaToIr.hpp  TypeInfo.hpp
TauIRLib/include/TauIR/file/: BinaryObject.hpp
TauIRLib/include/TauIR/ssa/: SsaEmulator.hpp  SsaFunctionAttachment.hpp  SsaOpcodes.hpp  SsaReturnTypeAnalysis.hpp  SsaTypes.hpp  SsaVariableAnalysis.hpp  SsaVisitor.hpp  SsaWriter.hpp
TauIRLib/include/TauIR/ssa/opto/: ConstantProp.hpp  DeadCodeElimination.hpp  Inliner.hpp  ReWriteVisitor.hpp
TauIRLib/src/: BinaryObject.cpp  DeadCodeElimination.cpp  Emulator.cpp  Function.cpp  FunctionNameMangler.cpp  IrToSsa.cpp  IrWriter.cpp  Module.cpp  SsaEmulator.cpp  SsaFunctionAttachment.cpp  SsaTypeRegistry.cpp  SsaWriter.cpp  TypeInfo.cpp
TauIRTest/: CMakeLists.txt  TauIRTest.vcxproj  test_exe.tire
TauIRTest/src/: Main.cpp
concepts/: CrtpVisitor.cpp  IR_SSA.txt  IR_SSA_0.txt  IR_SSA_1.txt  VirtualInstructionSet.md
